* Add payment amount cache to account move line
* Add option to create direct debit based on balance
* Enforce payment amount to be greater or equal to zero

Version 7.2.0 - 2024-04-29
--------------------------
* Bug fixes (see mercurial logs for details)


Version 7.0.0 - 2023-10-30
--------------------------
* Bug fixes (see mercurial logs for details)
* Add support for Python 3.12
* Warn when submitting, approving or proceeding payment with reconciled line
* Warn when cancelling, grouping, rescheduling or delegating move line with payment
* Mark Payment as succeeded or failed when imported in statement
* Add pay buttons on invoice lines to pay

Version 6.8.0 - 2023-05-01
--------------------------
* Bug fixes (see mercurial logs for details)
* Remove support for Python 3.7
* Add support for Python 3.11
* Skip blocked payments when creating direct debits

Version 6.6.0 - 2022-10-31
--------------------------
* Bug fixes (see mercurial logs for details)
* Add identical party from payments

Version 6.4.0 - 2022-05-02
--------------------------
* Bug fixes (see mercurial logs for details)
* Allow only lines with maturity date to be paid
* Allow processing receivable payment without approval
* Add submitted state to payment
* Permit to edit amount for manual payment in processing
* Use reference field for statement line relation
* Do not create dunning for line with pending payment
* Add support for Python 3.10
* Remove support for Python 3.6
* Add amount_line_paid property on payments

Version 6.2.0 - 2021-11-01
--------------------------
* Bug fixes (see mercurial logs for details)
* Add wizard to create direct debit for configured parties
* Add succeed button for payment groups

Version 6.0.0 - 2021-05-03
--------------------------
* Bug fixes (see mercurial logs for details)
* Add employee on payments for some states

Version 5.8.0 - 2020-11-02
--------------------------
* Bug fixes (see mercurial logs for details)
* Remove support for Python 3.5