@@ -4,7 +4,9 @@ this repository contains the full copyright notices and license terms. -->
 <data>
     <xpath expr="/form" position="inside">
         <separator id="payment" string="Payment" colspan="4"/>
-        <label name="payment_group_sequence" string="Group Sequence"/>
+        <label name="payment_sequence" string="Sequence:"/>
+        <field name="payment_sequence"/>
+        <label name="payment_group_sequence" string="Group Sequence:"/>
         <field name="payment_group_sequence"/>
         <newline/>
     </xpath>
