@@ -1,7 +1,12 @@
 <?xml version="1.0"?>
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
-<form>
+<form cursor="journal">
+    <label name="number"/>
+    <field name="number"/>
+    <label name="company"/>
+    <field name="company"/>
+
     <label name="journal"/>
     <field name="journal" widget="selection"/>
     <label name="kind"/>
@@ -20,8 +25,6 @@ this repository contains the full copyright notices and license terms. -->
             <field name="description" colspan="3"/>
         </page>
         <page string="Other Info" id="info">
-            <label name="company"/>
-            <field name="company"/>
             <label name="group"/>
             <field name="group"/>
             <label name="origin"/>
