@@ -2,6 +2,7 @@
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <tree>
+    <field name="number"/>
     <field name="journal" expand="1" optional="0"/>
     <field name="kind" optional="0"/>
     <field name="party" expand="2" optional="0"/>
